--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "gatsby-plugin-postcss": "^6.14.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.3",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.4.17"
@@ -34,7 +35,8 @@
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "repository": {
     "type": "git",
